--- a/src/Website.Api/appsettings.json
+++ b/src/Website.Api/appsettings.json
@@ -3,6 +3,6 @@
     "SqlServerConnection": "Server=db;Database=WordUpDb;User Id=sa;Password=Manager2017;"
   },
   "Identity": {
-    "Authority" : "http://localhost:5005"
+    "Authority" : "https://idp.sadin.dev"
   }
 } 
